user-app/ambassador.yml
apiVersion: v1
kind: Service
metadata:
  name: ambassador
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    service: ambassador
